# OTUS-CPP-Professional-HomeWork_4

./: CMakeLists.txt  Doxyfile  README.md  _xD0_x9F_xD0_xBE_xD0_xBB_xD0_xB5_xD0_xB7_xD0_xBD_xD1_x8B_xD0_xB5.html  annotated.html  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherits.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  menudata.js  pages.html  print__ip_8h.html  print__ip_8h__dep__incl.map  print__ip_8h__dep__incl.md5  print__ip_8h__incl.map  print__ip_8h__incl.md5  print__ip_8h_source.html  struct_tuple_printer-members.html  struct_tuple_printer.html  struct_tuple_printer_3_01_tuple_00_011_01_4-members.html  (+24 more)
.github/workflows/: release.yml
include/: pint_ip.h  print_ip.h
search/: all_0.js  all_3.js  all_4.js  classes_1.js  functions_1.js  pages_0.js  searchdata.js
src/: main.cpp
test/: test.h  test_print_ip.h
